# django_informixdb_jdbc

./: README.rst  pyproject.toml  tox.ini
django_informixdb/: base.py  compiler.py  datatypes.py  fields.py  introspection.py  operations.py
test/: test_base.py
